--- a/app/views/institutions/_finance.html.erb
+++ b/app/views/institutions/_finance.html.erb
@@ -1,5 +1,7 @@
+<!-- so -->
 
-  <%= render 'shared/core_listing', model: "Programme", act: "institutions" %>  
+
+  <%= render 'programmes/listing', model: "Programme", act: "institutions" %>  
 
 
 
