--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -5,7 +5,11 @@
                 <div class="modal-content">
                   <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                    <h4 class="modal-title" id="myModalLabel"><%= header %></h4>
+                    <h4 class="modal-title" id="myModalLabel">
+                    <strong>
+                    <%= header %>
+                    </strong>
+                    </h4>
                   </div>
                   <div class="modal-body">
                     <%= content %>
@@ -13,8 +17,7 @@
                     
                   </div>
                   <div class="modal-footer">
-                    <button type="button"  data-dismiss="modal">Close</button>
-                    <%= button.html_safe rescue nil %>
+                      <%= button.html_safe rescue nil %>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
