--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -67,7 +67,7 @@ abbr[title] {
 
 b,
 strong {
-  font-weight: bold;
+  font-weight: 500;
 }
 
 dfn {
@@ -6610,13 +6610,15 @@ button.close {
   font-size: 15px;
   font-weight: normal;
   line-height: 18px;
-  background-color: #333333;
-  border-bottom: 1px solid #262626;
+  background-color: #FFE9B4;
+  border-bottom: 1px solid #888a85;
   border-radius: 5px 5px 0 0;
+
 }
 
 .popover-content {
   padding: 9px 14px;
+  background-color: #FFE9B4;
 }
 
 .popover .arrow,
@@ -6693,7 +6695,7 @@ button.close {
   top: 50%;
   right: -11px;
   margin-top: -11px;
-  border-left-color: #999999;
+  border-left-color: #fff;
   border-left-color: rgba(0, 0, 0, 0.25);
   border-right-width: 0;
 }
@@ -6701,7 +6703,7 @@ button.close {
 .popover.left .arrow:after {
   right: 1px;
   bottom: -10px;
-  border-left-color: #333333;
+  border-left-color: #fff;
   border-right-width: 0;
   content: " ";
 }
@@ -7853,11 +7855,6 @@ label,
   text-transform: uppercase;
 }
 
-.popover {
-  font-size: 12px;
-  font-weight: 300;
-  color: #fff;
-}
 
 .clearfix:before,
 .clearfix:after {
