--- a/app/views/application_statuses/update.js.erb
+++ b/app/views/application_statuses/update.js.erb
@@ -6,7 +6,7 @@ $("#status_select_<%= @programme.id %>").slideToggle();
 <!-- If the application_status is joined then ask to update fees by the followin modal -->
 <% if (@programme.application_status.name.downcase == "joined") %>
 
-    <% ctnt = (render 'payments/create_fee', {a: @programme}) %>     
+    <% ctnt = (render 'fees/create_fee', {a: @programme}) %>     
     $('#create-fee-container').html("<%= escape_javascript(render :partial => 'shared/modal',
                                          :locals =>   {id: 'create-fee', 
                                                        content: ctnt.html_safe,
