--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -104,7 +104,7 @@
                 <%= link_to "/users/#{current_user.id}" do %><span class="glyphicon glyphicon-user"></span>My account<% end %>
               <% end %>
             </li>
-            <li id="configuration" class="active">
+            <li id="configuration">
                 <%= link_to "/configuration" do %><span class="glyphicon glyphicon-list"></span>Configuration<% end %>
             </li>
           </ul>
